code/hello.2546042.60.err
  File "/home/users/balter/simple-condor-intro/code/hello.py", line 8
    this is an error
                   ^
SyntaxError: invalid syntax
